components/minio-operator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: openshift-minio-operator
    openshift.io/cluster-monitoring: "true"
  name: openshift-minio-operator
